--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.vercer.engine.persist</groupId>
 	<artifactId>twig</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2</version>
+	<version>0.3-SNAPSHOT</version>
 
 	<properties>
 		<appengine.version>1.3.0</appengine.version>
