--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>0.3-SNAPSHOT</version>
 
 	<properties>
-		<appengine.version>1.3.0</appengine.version>
+		<appengine.version>1.3.1</appengine.version>
 		<guice.version>2.0</guice.version>
 	</properties>
 
@@ -35,7 +35,7 @@
 
 		<dependency>
 			<groupId>com.google.appengine</groupId>
-			<artifactId>appengine-local-runtime</artifactId>
+			<artifactId>appengine-api</artifactId>
 			<version>${appengine.version}</version>
 			<scope>test</scope>
 		</dependency>
@@ -43,6 +43,13 @@
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-labs</artifactId>
+			<version>${appengine.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-testing</artifactId>
 			<version>${appengine.version}</version>
 			<scope>test</scope>
 		</dependency>
