--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.vercer.engine.persist</groupId>
 	<artifactId>twig-persist</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 
 	<properties>
 		<appengine.version>1.3.2</appengine.version>
@@ -124,10 +124,6 @@
 			<id>twig</id>
 			<url>http://mvn.twig-persist.googlecode.com/hg</url>
 		</repository>
-        <repository>
-            <id>google-maven-repository</id>
-            <url>http://google-maven-repository.googlecode.com/svn/repository</url>
-        </repository>
 	</repositories>
 
 </project>
