--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.vercer.engine.persist</groupId>
 	<artifactId>twig-persist</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<properties>
 		<appengine.version>1.3.2</appengine.version>
