Modified project settings

--- a/project.config
+++ b/project.config
@@ -21,3 +21,5 @@
 	push = +force group user/Miroslav Genov (mgenov)
 	pushTag = group user/Miroslav Genov (mgenov)
 	pushSignedTag = group user/Miroslav Genov (mgenov)
+[receive]
+	requireChangeId = true
